--- a/source/app/src/main/res/layout/activity_login.xml
+++ b/source/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="@dimen/_20sdp"
                     android:fontFamily="@font/opensans"
-                    android:text="Login"
+                    android:text="@string/login"
                     android:textSize="@dimen/_18ssp"
                     android:textStyle="bold" />
 
@@ -65,12 +65,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_16sdp"
                     android:layout_marginTop="@dimen/_20sdp"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     android:textColorHint="@color/main_color"
                     app:boxStrokeColor="@color/main_color"
                     app:boxStrokeErrorColor="@color/error_text">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@{vm.mEmail}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/dark_gray_text" />
@@ -84,13 +85,14 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_16sdp"
                     android:layout_marginTop="@dimen/_10sdp"
-                    android:hint="Password"
+                    android:hint="@string/password"
                     android:textColorHint="@color/main_color"
                     app:boxStrokeColor="@color/main_color"
                     app:boxStrokeErrorColor="@color/error_text"
                     app:passwordToggleEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:text="@{vm.mPassword}"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/dark_gray_text" />
@@ -98,6 +100,7 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/login_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_16sdp"
@@ -105,8 +108,9 @@
                     android:elevation="0dp"
                     android:fontFamily="@font/opensans"
                     android:paddingVertical="@dimen/_10sdp"
-                    android:text="Login"
+                    android:text="@string/login"
                     android:textSize="@dimen/_12ssp"
+                    android:onClick="onClick"
                     android:textStyle="bold"
                     app:backgroundTint="@color/main_color"
                     app:cornerRadius="@dimen/_20sdp" />
@@ -156,7 +160,7 @@
                     android:layout_marginStart="@dimen/_10sdp"
                     android:fontFamily="@font/opensans"
                     android:paddingVertical="@dimen/_10sdp"
-                    android:text="Continue with google"
+                    android:text="@string/continue_with_google"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/_12ssp"
                     android:textStyle="bold"
@@ -165,17 +169,21 @@
                     app:icon="@drawable/ic_google"
                     app:iconGravity="textStart"
                     app:iconPadding="@dimen/_4sdp"
+                    android:onClick="onClick"
                     app:iconTint="@null"
                     app:strokeColor="@color/main_color"
+                    android:id="@+id/login_with_google_btn"
                     app:strokeWidth="@dimen/_1sdp" />
 
                 <TextView
+                    android:id="@+id/register_btn"
+                    android:onClick="onClick"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginStart="@dimen/_10sdp"
                     android:fontFamily="@font/opensans"
-                    android:text="registration"
+                    android:text="@string/registration"
                     android:textColor="@color/main_color"
                     android:textSize="@dimen/_14ssp" />
             </LinearLayout>
