--- a/source/app/src/main/res/xml/network_security_config.xml
+++ b/source/app/src/main/res/xml/network_security_config.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">www.abc.io</domain>
+        <domain includeSubdomains="true">10.0.2.2</domain>
     </domain-config>
+    <base-config>
+        <trust-anchors>
+            <certificates src="@raw/aee"/>
+            <certificates src="system"/>
+        </trust-anchors>
+    </base-config>
 </network-security-config>
