--- a/source/app/src/main/res/layout/fragment_university.xml
+++ b/source/app/src/main/res/layout/fragment_university.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
@@ -9,11 +10,16 @@
             name="vm"
             type="com.bsq.aee.ui.main.university.UniversityViewModel" />
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/com_facebook_blue"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            tools:listitem="@layout/university_item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.recyclerview.widget.RecyclerView>
+    </LinearLayout>
+
 </layout>
