created post adapter

--- a/source/app/src/main/res/layout/layout_post.xml
+++ b/source/app/src/main/res/layout/layout_post.xml
@@ -5,69 +5,82 @@
     <data>
 
     </data>
-
-    <com.google.android.material.card.MaterialCardView
-        app:cardCornerRadius="@dimen/_8sdp"
-        app:cardElevation="@dimen/_8sdp"
+    <RelativeLayout
+        android:paddingVertical="@dimen/_1sdp"
+        android:paddingHorizontal="@dimen/_8sdp"
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:padding="@dimen/_8sdp"
+        <com.google.android.material.card.MaterialCardView
+            app:cardCornerRadius="@dimen/_8sdp"
+            app:cardElevation="0dp"
+            app:strokeWidth="@dimen/_1sdp"
+            app:strokeColor="@color/gray_text"
+            app:cardPreventCornerOverlap="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/avatar"
-                android:layout_width="@dimen/_34sdp"
-                android:layout_height="@dimen/_34sdp"
-                android:src="@drawable/ic_launcher_foreground"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <TextView
-                android:layout_marginStart="@dimen/_6sdp"
-                android:fontFamily="@font/opensans"
-                android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="@id/avatar"
-                app:layout_constraintStart_toEndOf="@id/avatar"
-                android:layout_marginTop="@dimen/_3sdp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/username"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10ssp"
-                android:text="quan"/>
-            <TextView
-                android:id="@+id/title"
-                android:ellipsize="end"
-                app:layout_constraintTop_toBottomOf="@id/avatar"
-                app:layout_constraintStart_toStartOf="@id/avatar"
-                android:layout_marginTop="@dimen/_8sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:textColor="@color/black"
-                android:layout_width="0dp"
-                android:maxLines="2"
-                android:layout_height="wrap_content"
-                android:text="Title"
-                android:textStyle="bold"/>
-            <ImageView
-                android:padding="@dimen/_2sdp"
-                android:src="@drawable/star"
-                android:id="@+id/favorite"
-                android:layout_width="@dimen/_18sdp"
-                android:layout_height="@dimen/_18sdp"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                android:layout_marginTop="@dimen/_8sdp"
-                app:layout_constraintStart_toStartOf="@id/title"/>
-            <ImageView
-                android:src="@drawable/chat"
-                android:id="@+id/comment"
-                android:layout_width="@dimen/_18sdp"
-                android:layout_height="@dimen/_18sdp"
-                app:layout_constraintTop_toTopOf="@id/favorite"
-                android:layout_marginStart="@dimen/_8sdp"
-                app:layout_constraintStart_toEndOf="@id/favorite"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:padding="@dimen/_8sdp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </com.google.android.material.card.MaterialCardView>
+                <ImageView
+                    android:src="@drawable/ic_google"
+                    android:id="@+id/avatar"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:layout_marginStart="@dimen/_6sdp"
+                    android:fontFamily="@font/opensans"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="@id/avatar"
+                    app:layout_constraintStart_toEndOf="@id/avatar"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/username"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_10ssp"
+                    android:text="quan"/>
+                <TextView
+                    android:paddingHorizontal="@dimen/_2sdp"
+                    android:id="@+id/title"
+                    android:ellipsize="end"
+                    app:layout_constraintTop_toBottomOf="@id/avatar"
+                    app:layout_constraintStart_toStartOf="@id/avatar"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textColor="@color/black"
+                    android:layout_width="0dp"
+                    android:maxLines="2"
+                    android:fontFamily="@font/opensans"
+                    android:textSize="@dimen/_12ssp"
+                    android:layout_height="wrap_content"
+                    android:text="Title"
+                    android:textStyle="bold"/>
+                <ImageView
+                    android:padding="@dimen/_2sdp"
+                    android:src="@drawable/star"
+                    android:id="@+id/favorite"
+                    android:layout_width="@dimen/_18sdp"
+                    android:layout_height="@dimen/_18sdp"
+                    app:layout_constraintTop_toBottomOf="@id/title"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    app:layout_constraintStart_toStartOf="@id/title"/>
+                <ImageView
+                    android:src="@drawable/chat"
+                    android:id="@+id/comment"
+                    android:layout_width="@dimen/_18sdp"
+                    android:layout_height="@dimen/_18sdp"
+                    app:layout_constraintTop_toTopOf="@id/favorite"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    app:layout_constraintStart_toEndOf="@id/favorite"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+    </RelativeLayout>
 </layout>
