--- a/source/app/src/main/res/layout/fragment_search.xml
+++ b/source/app/src/main/res/layout/fragment_search.xml
@@ -14,11 +14,14 @@
     </data>
 
     <LinearLayout
-        android:padding="@dimen/_8sdp"
+        android:paddingVertical="@dimen/_8sdp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <include
+            android:layout_marginHorizontal="@dimen/_8sdp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             layout="@layout/layout_search_bar"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
