added create post api and display post in search fragment

--- a/source/app/src/main/res/layout/fragment_search.xml
+++ b/source/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -12,23 +13,37 @@
             name="vm"
             type="com.bsq.aee.ui.main.search.SearchViewModel" />
     </data>
-
-    <LinearLayout
-        android:paddingVertical="@dimen/_8sdp"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include
-            android:layout_marginHorizontal="@dimen/_8sdp"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:paddingVertical="@dimen/_8sdp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/layout_search_bar"/>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
-            tools:listitem="@layout/layout_post"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <include
+                android:layout_marginHorizontal="@dimen/_8sdp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/layout_search_bar"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                tools:listitem="@layout/layout_post"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:backgroundTint="@color/main_color"
+            app:tint="@color/white"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:src="@drawable/add_icon"
+            android:onClick="@{(v)->f.onClick(v)}"
+            android:layout_margin="16dp"/>
+    </FrameLayout>
 </layout>
