--- a/source/app/src/main/res/drawable/chat.xml
+++ b/source/app/src/main/res/drawable/chat.xml
@@ -4,15 +4,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M9,9H7V11H9V9Z"
-      android:fillColor="#5F5F5F"/>
-  <path
-      android:pathData="M11,9H13V11H11V9Z"
-      android:fillColor="#5F5F5F"/>
-  <path
-      android:pathData="M17,9H15V11H17V9Z"
-      android:fillColor="#5F5F5F"/>
-  <path
-      android:pathData="M3,5V21L7.8,17.4C8.1458,17.1396 8.5671,16.9992 9,17H19C20.1046,17 21,16.1046 21,15V5C21,3.8954 20.1046,3 19,3H5C3.8954,3 3,3.8954 3,5ZM5,17V5H19V15H8.334C7.9011,14.9988 7.4796,15.1393 7.134,15.4L5,17Z"
+      android:pathData="M8.0513,17.8285L8.7049,18.1778C9.7176,18.7193 10.8486,19.0017 11.997,19L12,19C15.8661,19 19,15.8661 19,12C19,8.1339 15.8661,5 12,5C8.1339,5 5,8.1339 5,12V12.003C4.9983,13.1514 5.2807,14.2824 5.8222,15.2951L6.1715,15.9486L5.6343,18.3657L8.0513,17.8285ZM3,21L4.0584,16.2381C3.3614,14.9343 2.9978,13.4784 3,12C3,7.0293 7.0293,3 12,3C16.9707,3 21,7.0293 21,12C21,16.9707 16.9707,21 12,21C10.5216,21.0022 9.0657,20.6386 7.7619,19.9416L3,21Z"
       android:fillColor="#5F5F5F"/>
 </vector>
