--- a/source/app/src/main/res/layout/layout_search_bar.xml
+++ b/source/app/src/main/res/layout/layout_search_bar.xml
@@ -47,12 +47,14 @@
         </RelativeLayout>
 
         <TextView
+            android:textSize="@dimen/_10ssp"
             android:id="@+id/search_btn"
             android:layout_width="@dimen/_60sdp"
             android:layout_height="@dimen/_30sdp"
             android:background="@drawable/search_btn_background"
             android:gravity="center"
             android:text="Tìm kiếm"
+            android:fontFamily="@font/opensans"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
