--- a/source/app/src/main/res/xml/network_security_config.xml
+++ b/source/app/src/main/res/xml/network_security_config.xml
@@ -3,7 +3,7 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">10.0.2.2</domain>
     </domain-config>
-    <base-config>
+    <base-config cleartextTrafficPermitted="true">
         <trust-anchors>
             <certificates src="@raw/aee"/>
             <certificates src="system"/>
