--- a/source/app/src/main/res/layout/layout_replpy.xml
+++ b/source/app/src/main/res/layout/layout_replpy.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="item"
-            type="com.bsq.aee.data.model.api.response.PostResponse" />
+            type="com.bsq.aee.data.model.api.response.ReplyResponse" />
     </data>
 
     <RelativeLayout
@@ -21,7 +21,6 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="@dimen/_8sdp"
             app:cardElevation="0dp"
-            android:id="@+id/root"
             app:cardPreventCornerOverlap="true"
             app:strokeColor="#4D9A9A9A"
             app:strokeWidth="@dimen/_1sdp">
@@ -33,8 +32,8 @@
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/avatar"
-                    android:layout_width="@dimen/_30sdp"
-                    android:layout_height="@dimen/_30sdp"
+                    android:layout_width="@dimen/_26sdp"
+                    android:layout_height="@dimen/_26sdp"
                     android:src="@drawable/ic_google"
                     app:glide_image="@{item.user.avatarPath}"
                     app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +49,7 @@
                     android:fontFamily="@font/montserratalternates_medium"
                     android:text="@{item.user.username}"
                     android:textColor="#5A5A5A"
-                    android:textSize="@dimen/_10ssp"
+                    android:textSize="@dimen/_8ssp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@id/avatar"
                     app:layout_constraintTop_toTopOf="@id/avatar" />
@@ -72,32 +71,16 @@
                     android:id="@+id/email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_6sdp"
                     android:fontFamily="@font/montserratalternates_medium"
                     android:text="@{item.user.email}"
                     android:textColor="#9F9E9E"
                     android:textSize="@dimen/_6ssp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/avatar"
+                    app:layout_constraintStart_toStartOf="@id/username"
                     app:layout_constraintTop_toBottomOf="@id/username" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/title"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:ellipsize="end"
-                    style="@style/post_title"
-                    android:maxLines="2"
-                    android:paddingHorizontal="@dimen/_2sdp"
-                    android:text="@{item.title}"
-                    android:textColor="#373636"
-                    android:textSize="@dimen/_12ssp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@id/avatar"
-                    app:layout_constraintTop_toBottomOf="@id/avatar" />
-
                 <TextView
+                    android:layout_marginTop="@dimen/_6sdp"
                     android:id="@+id/content"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -106,12 +89,12 @@
                     android:maxLines="2"
                     android:paddingHorizontal="@dimen/_2sdp"
                     android:text="@{item.content}"
-                    android:textColor="#A8A8A8"
-                    android:textSize="@dimen/_9ssp"
+                    android:textColor="#373636"
+                    android:textSize="@dimen/_8ssp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@id/title"
-                    app:layout_constraintTop_toBottomOf="@id/title" />
+                    app:layout_constraintStart_toStartOf="@id/avatar"
+                    app:layout_constraintTop_toBottomOf="@id/avatar" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
