--- a/source/app/src/main/res/layout/university_item.xml
+++ b/source/app/src/main/res/layout/university_item.xml
@@ -24,6 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher_background"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_90sdp"/>
             <TextView
