--- a/source/app/src/main/res/values/styles.xml
+++ b/source/app/src/main/res/values/styles.xml
@@ -52,4 +52,8 @@
         <item name="fontFamily">@font/montserratalternates_medium</item>
         <item name="android:fontFamily">@font/montserratalternates_medium</item>
     </style>
+    <style name="semibold">
+        <item name="fontFamily">@font/montserratalternates_semibold</item>
+        <item name="android:fontFamily">@font/montserratalternates_semibold</item>
+    </style>
 </resources>
