--- a/source/app/src/main/res/layout/layout_paging_button.xml
+++ b/source/app/src/main/res/layout/layout_paging_button.xml
@@ -4,16 +4,27 @@
 
     <data>
         <variable
+            name="index"
+            type="Integer" />
+        <variable
             name="selected"
             type="androidx.databinding.ObservableBoolean" />
     </data>
 
-    <TextView
-        app:paging_button="@{selected}"
-        style="@style/semibold"
-        android:textSize="@dimen/_8ssp"
-        android:gravity="center"
-        android:layout_width="@dimen/_18sdp"
-        android:layout_height="@dimen/_18sdp">
-    </TextView>
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:text="@{index.toString()}"
+            android:textColor="@color/white"
+            android:id="@+id/root"
+            app:paging_button="@{selected}"
+            style="@style/semibold"
+            android:textSize="@dimen/_8ssp"
+            android:gravity="center"
+            android:layout_width="@dimen/_18sdp"
+            android:layout_height="@dimen/_18sdp">
+        </TextView>
+    </FrameLayout>
+
 </layout>
