--- a/source/app/src/main/res/layout/layout_reply_bar.xml
+++ b/source/app/src/main/res/layout/layout_reply_bar.xml
@@ -12,6 +12,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
